<resources>
    <string name="app_name">ConviSala</string>
    <string name="nav_header_title">Convisala</string>
    <string name="nav_header_subtitle">O seu aplicativo de gerenciamento de salas!</string>
    <string name="navigation_drawer_open">Abrir gaveta de navegação</string>
    <string name="navigation_drawer_close">Fechar gaveta de navegação</string>
    <string name="nav_header_desc">Cabeçalho de Navegação</string>
    <string name="action_settings">Sobre…</string>

    <string name="menu_login">Login</string>
    <string name="menu_reservas">Reservas</string>
    <string name="menu_salas">Salas</string>
    <string name="menu_perfil">Perfil</string>
    <string name="menu_opcoes">Opções</string>
    <string name="menu_share">Compartilhar</string>
    <string name="menu_send">Enviar</string>
    <string name="login_logar">Logar</string>
    <string name="login_senha">Senha</string>
    <string name="login_usuario">Usuário ou E-mail</string>
    <string name="login_convidado">Acessar como convidado</string>
    <string name="signup_cadastrar">Cadastrar</string>
    <string name="signup_nome">Nome</string>
    <string name="login_criar_conta">Criar Conta</string>
    <string name="signup_email">E-mail</string>
    <string name="activity_info_sala_nome">Sala: %s</string>
    <string name="activity_info_sala_localizacao">Localização: %s</string>
    <string name="fragment_reservas_solicitador">por %s</string>
    <string name="fragment_reservas_titulo">Suas Reservas:</string>
    <string name="fragment_salas_titulo">Salas Disponíveis:</string>
    <string name="communicate">Comunicação</string>
    <string name="lista_menu_editar">Editar</string>
    <string name="lista_menu_remover">Remover</string>
    <string name="activity_info_reserva_descricao">Descrição: %s</string>
    <string name="activity_info_reserva_organizador">Organizador: %s</string>
</resources>
