<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_reservas">

    <fragment
        android:id="@+id/nav_reservas"
        android:name="br.com.wises.convisala.ui.reservas.ReservasFragment"
        android:label="@string/menu_reservas"
        tools:layout="@layout/fragment_reservas" />

    <fragment
        android:id="@+id/nav_salas"
        android:name="br.com.wises.convisala.ui.salas.SalasFragment"
        android:label="@string/menu_salas"
        tools:layout="@layout/fragment_salas" />

    <fragment
        android:id="@+id/nav_perfil"
        android:name="br.com.wises.convisala.ui.perfil.PerfilFragment"
        android:label="@string/menu_perfil"
        tools:layout="@layout/fragment_perfil" />

    <fragment
        android:id="@+id/nav_opcoes"
        android:name="br.com.wises.convisala.ui.opcoes.OpcoesFragment"
        android:label="@string/menu_opcoes"
        tools:layout="@layout/fragment_opcoes" />

    <fragment
        android:id="@+id/nav_share"
        android:name="br.com.wises.convisala.ui.share.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_send"
        android:name="br.com.wises.convisala.ui.send.SendFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_send" />

</navigation>